data/derived/fa15/progs/unify/prog3351.ml.out
Characters 148-159:
  |h'::t' -> [h'*i] @ [remainder h * i];;
                       ^^^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
